küçük bir yedek hahahaha